--- a/source/less/blocks/form-content.less
+++ b/source/less/blocks/form-content.less
@@ -1,31 +1,16 @@
+.form-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: auto;
+  padding: 0;
+}
+
 @media (min-width: @tablet-width) {
   .form-content {
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
-  .customer {
-    order: 2;
-  }
-
-  .contacts {
-    order: 3;
-  }
-
-  .radio {
-    order: 1;
-  }
-
-  .checkbox {
-    order: 4;
-  }
-
-  .discription {
-    order: 5;
-  }
-
-  .send-toggle {
-    order: 6;
   }
 }
