--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -14,7 +14,7 @@
   height: 40px;
 }
 
-.form-head--sedona::after {
+.form-head__position--sedona::after {
   content: "";
   position: absolute;
   top: 133px;
@@ -47,7 +47,7 @@
 
 @media (min-width: @tablet-width) {
   .form-head {
-    width: 769px;
+    width: auto;
     min-height: 513px;
     border: none;
   }
@@ -60,7 +60,7 @@
     height: 80px;
   }
 
-  .form-head--sedona::after {
+  .form-head__position--sedona::after {
     content: "";
     position: absolute;
     top: 233.5px;
@@ -80,9 +80,10 @@
   }
 
   .form-head__text {
-    width: 440px;
+    width: 442px;
     margin: 10px auto;
     margin-bottom: 35px;
+    text-align: center;
   }
 }
 
@@ -99,7 +100,7 @@
     height: 80px;
   }
 
-  .form-head--sedona::after {
+  .form-head__position--sedona::after {
     content: "";
     position: absolute;
     top: 243.5px;
