--- a/source/less/blocks/form-section.less
+++ b/source/less/blocks/form-section.less
@@ -1,5 +1,5 @@
 .form-section {
-  width: 320px;
+  width: auto;
   margin: 0;
   padding: 0;
   border-left: 0.3px solid rgba(1, 1, 1, 0.3);
@@ -8,12 +8,12 @@
 
 @media (min-width: @tablet-width) {
   .form-section {
-    width: 768px;
+    width: auto;
   }
 }
 
 @media (min-width: @desktop-width) {
   .form-section {
-    width: 1200px;
+    width: auto;
   }
 }
