--- a/source/less/blocks/panel.less
+++ b/source/less/blocks/panel.less
@@ -70,18 +70,21 @@
 .panel__replay {
   margin-right: 83px;
   margin-top: 22px;
+  background-color:transparent;
   border: none;
 }
 
 .panel__subtitles {
   margin-left: 17px;
   margin-top: 22px;
+  background-color: transparent;
   border: none;
 }
 
 .panel__fullscreen {
   margin-left: 4px;
   margin-top: 22px;
+  background-color:transparent;
   border: none;
 }
 
