--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -68,6 +68,10 @@
   text-transform: uppercase;
 }
 
+.places__tour {
+  border: none;
+}
+
 @media (min-width: @tablet-width) {
   .places {
     position: relative;
