--- a/source/less/blocks/question-photo.less
+++ b/source/less/blocks/question-photo.less
@@ -89,6 +89,7 @@
     display: block;
     width: 440px;
     margin: 0;
+    margin-right: 3px;
     padding: 0;
   }
 
@@ -96,6 +97,7 @@
     display: inline-block;
     margin: 0;
     padding: 0;
+    padding-right: 3px;
   }
 }
 
