--- a/source/less/blocks/send-toggle.less
+++ b/source/less/blocks/send-toggle.less
@@ -1,11 +1,19 @@
+.send-toggle {
+  padding: 57px 1px 47px 20px;
+}
+
 @media (min-width: @tablet-width) {
   .send-toggle {
-    margin-left: 58px;
+    order: 6;
+    padding: 57px 1px 61px 60px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .send-toggle {
     margin-left: 120px;
+    padding: 0;
+    padding-top: 35px;
+    padding-bottom: 66px;
   }
 }
