--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -20,6 +20,7 @@
 
 .site-list__item a {
   font-size: @medium-font;
+  font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
   text-decoration: none;
