--- a/source/less/blocks/back-sedona.less
+++ b/source/less/blocks/back-sedona.less
@@ -6,11 +6,13 @@
   padding: 0;
 
   background-repeat: no-repeat;
+  background-position: bottom;
   background-image: url("../img/bg-back-mobile@1x.jpg");
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
   }
 }
 
@@ -19,11 +21,14 @@
     position: relative;
     width: auto;
     height: 290px;
+    background-repeat: no-repeat;
+    background-position: bottom;
     background-image: url("../img/bg-back-tablet@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-tablet@2x.jpg");
-      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: bottom;
     }
   }
 }
@@ -33,11 +38,14 @@
     position: relative;
     width: auto;
     height: 300px;
+    background-repeat: no-repeat;
+    background-position: bottom;
     background-image: url("../img/bg-back-desktop@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/bg-back-desktop@2x.jpg");
-      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: bottom;
     }
   }
 }
