--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,38 +1,23 @@
 .contacts {
   position: relative;
-  min-width: 286px;
-  margin-top: 24px;
-  padding: 20px 18px 28px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  width: auto;
+  margin: 0;
+  margin-top: 18px;
+
+  padding: 0;
   border: none;
 }
 
-.contacts--borders::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: -20px;
-  left: 1px;
-  z-index: 10;
-
-  width: 320px;
-  height: 1px;
-  background-color: rgba(1, 1, 1, 0.1);
-}
-
-.contacts--borders::after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 266px;
-  left: 1px;
-  z-index: 10;
-
-  width: 320px;
-  height: 1px;
-  background-color: rgba(1, 1, 1, 0.1);
-}
-
 .contacts__title {
+  display: block;
+  width:  318px;
+  margin: 0;
+  padding: 0;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
@@ -41,11 +26,16 @@
   color: #000000;
 }
 
-.contacts__wrap {
+.contacts__wrap-wrap {
   position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(1, 1, 1, 0.1);
 }
 
 .contacts__tel {
@@ -59,10 +49,10 @@
 
 .contacts__tel-text {
   position: relative;
-  width: 165px;
-  height: 20px;
+  width: 257px;
+  height: 26px;
   margin: 0;
-  margin-left: 20px;
+  margin-left: 21px;
   padding: 0;
   font-size: @little-font;
   font-weight: 400;
@@ -76,7 +66,7 @@
   position: relative;
   width: 222px;
   height: 58px;
-  margin-top: 14px;
+  margin-top: 7px;
   padding-left: 20px;
   font-size: 18px;
   font-weight: 700;
@@ -87,7 +77,7 @@
   background-color: #f2f2f2;
 }
 
-.contacts--tube::before {
+.contacts__tel-text--tube::before {
   content: "";
   position: absolute;
   top: 34px;
@@ -99,7 +89,7 @@
   background-color: #e6e6e6;
 }
 
-.contacts--tube::after {
+.contacts__tel-text--tube::after {
   content: "";
   position: absolute;
   top: 54px;
@@ -149,7 +139,7 @@
   color: #000000;
 }
 
-.contacts--envelope::before {
+.contacts__email-text--envelope::before {
   content: "";
   position: absolute;
   top: 34px;
@@ -161,7 +151,7 @@
   background-color: #e6e6e6;
 }
 
-.contacts--envelope::after {
+.contacts__email-text--envelope::after {
   content: "";
   position: absolute;
   top: 55px;
@@ -206,26 +196,33 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 768px;
-    margin-top: 62px;
-    padding: 20px 20px 1px 59px;
+    order: 3;
+    width: auto;
+    margin: 0;
+    margin-top: 69px;
+    padding: 0;
   }
 
-  .contact__wrap {
-    height: auto;
+  .contacts__wrap-wrap {
+    margin: 0;
+    padding-top: 19px;
+    padding-left: 60px;
+    padding-right: 55px;
+    border: none;
+  }
+
+  .contacts__title {
+    display: block;
+    width:  766px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: @large-font;
   }
 
   .contacts__tel {
     flex-direction: column;
     height: 99px;
-  }
-
-  .contacts__title {
-    width: 280px;
-    margin: 0;
-
-    font-size: @large-font;
-    text-align: center;
   }
 
   .contacts__tel-text {
@@ -241,7 +238,7 @@
     margin-top: 18px;
   }
 
-  .contacts--tube::before {
+  .contacts__tel-text--tube::before {
     content: "";
     position: absolute;
     top: 38px;
@@ -250,7 +247,7 @@
     height: 58px;
   }
 
-  .contacts--tube::after {
+  .contacts__tel-text--tube::after {
     content: "";
     position: absolute;
     top: 57px;
@@ -274,56 +271,62 @@
     margin-top: 18px;
   }
 
-  .contacts--envelope::before {
+  .contacts__email-text--envelope::before {
     content: "";
     position: absolute;
     top: 38px;
     left: 570px;
   }
 
-  .contacts--envelope::after {
+  .contacts__email-text--envelope::after {
     content: "";
     position: absolute;
     top: 60px;
     left: 590px;
   }
 
-  .contacts--borders::before {
+  .contacts__wrap-wrap--borders::before {
     content: "";
     position: absolute;
     display: block;
-    top: 11px;
+    top: -13px;
     left: 60px;
     width: 125px;
     height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
   }
 
-  .contacts--borders::after {
+  .contacts__wrap-wrap--borders::after {
     content: "";
     position: absolute;
     display: block;
-    top: 11px;
-    left: 581px;
+    top: -13px;
+    left: 585px;
     width: 125px;
     height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
   }
 }
 
 @media (min-width: @desktop-width) {
-  .contacts__wrap {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 54px 1px 1px 40px;
-  }
-
   .contacts {
     width: auto;
   }
 
   .contacts__title {
-    margin-left: 400px;
-    text-align: left;
+    width: 1198px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+
+  .contacts__wrap-wrap {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: auto;
+    padding: 70px 1px 1px 99px;
   }
 
   .contacts__tel {
@@ -340,22 +343,22 @@
     padding-left: 22px;
   }
 
-  .contacts--borders::before {
+  .contacts__wrap-wrap--borders::before {
     content: "";
     position: absolute;
-    top: 11px;
+    top: -14px;
     left: 120px;
-    width: 274px;
+    width: 276px;
     height: 1px;
   }
 
-  .contacts--borders::after {
+  .contacts__wrap-wrap--borders::after {
     content: "";
     position: absolute;
     display: block;
-    top: 11px;
+    top: -14px;
     left: 800px;
-    width: 274px;
+    width: 276px;
     height: 1px;
   }
 
@@ -386,14 +389,14 @@
     padding-left: 20px;
   }
 
-  .contacts--tube::before {
+  .contacts__tel-text--tube::before {
     content: "";
     position: absolute;
     top: 0.1px;
     left: 342px;
   }
 
-  .contacts--tube::after {
+  .contacts__tel-text--tube::after {
     content: "";
     position: absolute;
     top: 20px;
@@ -408,14 +411,14 @@
     margin-left: 30px;
   }
 
-  .contacts--envelope::before {
+  .contacts__email-text--envelope::before {
     content: "";
     position: absolute;
     top: 0.1px;
     left: 423px;
   }
 
-  .contacts--envelope::after {
+  .contacts__email-text--envelope::after {
     content: "";
     position: absolute;
     top: 22px;
