--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -1,12 +1,21 @@
 .customer {
-  width: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  width: 318px;
+  margin: 0;
   margin-top: 18px;
-  padding: 24px 17px 21px;
+
+  padding: 0;
   border: none;
 }
 
 .customer__title {
-  display: inline-block;
+  display: block;
+  width:  318px;
   margin: 0;
   padding: 0;
   font-size: @medium-font;
@@ -17,18 +26,26 @@
   color: #000000;
 }
 
+.customer__wrap-wrap {
+  padding-top: 22px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-bottom: 1px solid rgba(1, 1, 1, 0.1);
+}
+
 .customer__name {
-  width: auto;
+  display: block;
+  width: 278px;
   height: 58px;
   margin: 0;
+  margin-bottom: 19px;
   padding: 0;
 }
 
 .customer__name-letter {
-  width: 230px;
-  height: 58px;
+  width: 34px;
   margin: 0;
-  margin-right: 10px;
+  margin-right: 9px;
   padding: 0;
 
   font-size: @little-font;
@@ -40,11 +57,14 @@
 }
 
 .customer__name-holder {
-  width: 230px;
+  width: 229px;
   height: 58px;
   margin: 0;
   margin-bottom: 23px;
   padding-left: 23px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000000;
   background-color: @gray;
   border: none;
 }
@@ -52,7 +72,7 @@
 .customer__name-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 56px;
   text-align: left;
   color: #000000;
 }
@@ -69,18 +89,17 @@
 }
 
 .customer__surname {
-  width: auto;
+  width: 278px;
   height: 58px;
   margin: 0;
-  margin-top: 19px;
+  margin-bottom: 21px;
   padding: 0;
 }
 
 .customer__surname-letter {
-  width: 230px;
-  height: 58px;
+  width: 75px;
   margin: 0;
-  margin-right: 12px;
+  margin-right: 9px;
   padding: 0;
 
   font-size: @little-font;
@@ -96,6 +115,9 @@
   height: 58px;
   margin-bottom: 20px;
   padding-left: 22px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000000;
   background-color: @gray;
   border: none;
 }
@@ -103,7 +125,7 @@
 .customer__surname-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 56px;
   text-align: left;
   color: #000000;
 }
@@ -120,18 +142,18 @@
 }
 
 .customer__patronymic {
-  width: auto;
+  width: 278px;
   height: 58px;
   margin: 0;
-  margin-top: 19px;
+
+  margin-bottom: 25px;
   padding: 0;
 }
 
 .customer__patronymic-letter {
-  width: 230px;
-  height: 58px;
+  width: 75px;
   margin: 0;
-  margin-right: 14px;
+  margin-right: 12px;
   padding: 0;
 
   font-size: @little-font;
@@ -143,9 +165,12 @@
 }
 
 .customer__patronymic-holder {
-  width: 193px;
+  width: 190px;
   height: 58px;
-  padding-left: 22px;
+  padding-left: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000000;
   background-color: @gray;
   border: none;
 }
@@ -153,7 +178,7 @@
 .customer__patronymic-holder::placeholder {
   font-size: 18px;
   font-weight: 700;
-  line-height: 26px;
+  line-height: 56px;
   text-align: left;
   color: #000000;
 }
@@ -171,78 +196,96 @@
 
 @media (min-width: @tablet-width) {
   .customer {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 23px;
-    padding-right: 10px;
-    width: 379px;
+    width: 382px;
+    margin: 0;
     margin-top: 30px;
+    padding: 0;
+    order: 2;
+  }
+
+  .customer__wrap-wrap {
+    padding-top: 22px;
+    padding-left: 58px;
+    padding-right: 55px;
+    border: none;
   }
 
   .customer__title {
-    width: 275px;
+    width: 381px;
     margin: 0;
-    margin-left: 36px;
+    padding-left: 58px;
     font-size: @large-font;
     text-align: left;
   }
 
   .customer__name {
     display: block;
-    height: 44px;
+    width: auto;
+    height: 58px;
     margin-top: 34px;
     margin-left: 1px;
-    padding-left: 36px;
+    margin-bottom: 21px;
+    padding: 0;
   }
 
   .customer__surname {
     display: block;
-    height: 44px;
-    margin-top: 34px;
-    margin-left: 1px;
-    padding-left: 36px;
+    width: auto;
+    height: 58px;
+    margin: 0;
+    margin-bottom: 21px;
+    padding: 0;
+    padding-left: 2px;
   }
 
   .customer__patronymic {
     display: block;
-    height: 44px;
-    margin-top: 34px;
-    margin-left: 1px;
-    padding-left: 36px;
+    height: 58px;
+    width: auto;
+    margin: 0;
+    padding: 0;
   }
 
   .customer__name-holder {
     width: 218px;
+    margin: 0;
   }
 
   .customer__surname-holder,
   .customer__patronymic-holder {
     width: 178px;
+    margin: 0;
   }
 
-  .customer__label {
-    margin: 0;
-    padding-left: 106px;
+  .customer__patronymic-letter {
+    margin-right: 14px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .customer {
-    width: 592px;
+    width: 598px;
     margin-top: 25px;
-    padding: 38px 1px 1px 45px;
+    padding: 0;
+  }
+
+  .customer__wrap-wrap {
+    padding: 38px 34px 1px 1px;
   }
 
   .customer__title {
-    margin-left: 36px;
+    width: 598px;
+    text-align: center;
+    margin: 0;
+    padding-right: 336px;
   }
 
   .customer__name {
     display: block;
-    height: 44px;
+    height: 58px;
+    margin: 0;
     margin-top: 17px;
-    margin-left: 1px;
-    padding-left: 36px;
+    margin-bottom: 20px;
   }
 
   .customer__name-holder {
