--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -14,7 +14,7 @@
   height: 40px;
 }
 
-.photos-head--sedona::after {
+.photos-head__position--sedona::after {
   content: "";
   position: absolute;
   top: 133px;
@@ -64,7 +64,7 @@
     height: 80px;
   }
 
-  .photos-head--sedona::after {
+  .photos-head__position--sedona::after {
     content: "";
     position: absolute;
     top: 234px;
@@ -104,7 +104,7 @@
     height: 80px;
   }
 
-  .photos-head--sedona::after {
+  .photos-head__position--sedona::after {
     content: "";
     position: absolute;
     top: 244px;
