--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -25,6 +25,15 @@
   height: 90px;
 }
 
+.photos-item__div-wrapsunset {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 90px;
+}
+
+
 .photos-item__text-wrap {
   position: relative;
   display: flex;
@@ -77,7 +86,7 @@
 }
 
 .photos-item__likes-icon path {
-  fill: rgba(1, 1, 1, 0.6);
+  fill: rgba(1, 1, 1, 0.3);
 }
 
 .photos-item__numbers {
