--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -18,16 +18,18 @@
 
   background-color: #ffffff;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   background-image: url("../img/bg-back-mobile@1x.jpg");
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: cover;
+    background-position: center;
   }
 }
 
-.reasons--sedona::before {
+.reasons__index1--sedona::before {
   content: "";
   position: absolute;
   top: 363px;
@@ -88,7 +90,7 @@
     height: 350px;
   }
 
-  .reasons--sedona::before {
+  .reasons__index1--sedona::before {
     position: absolute;
     top: 460px;
     left: 0.2px;
@@ -147,7 +149,7 @@
     height: 350px;
   }
 
-  .reasons--sedona::before {
+  .reasons__index1--sedona::before {
     position: absolute;
     top: 462px;
     left: 0.2px;
